updated music band info

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Imagine Dragons Tribute Page!</h1>
 
     <img
-    src="download.jpeg"
+    src="http://images6.fanpop.com/image/photos/38800000/Imagine-Dragons-imagine-dragons-38843125-300-200.jpg"
     alt="Imagine Dragon Band"
     />
 
