--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Imagine Dragons Tribute Page!</h1>
 
     <img
-    src="/users/aazeez1/desktop/img1.jpg"
+    src="https://github.com/afazeez82/prework_music_band/download.jpg"
     alt="Imagine Dragon Band"
     />
 
