--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Imagine Dragons Tribute Page!</h1>
 
     <img
-    src="https://github.com/afazeez82/prework_music_band/download.jpg"
+    src="http://images4.fanpop.com/image/photos/17800000/Cute-Panda-Cubs-Together-pandas-17838800-450-324.jpg"
     alt="Imagine Dragon Band"
     />
 
