added another image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Imagine Dragons Tribute Page!</h1>
 
     <img
-    src="http://images4.fanpop.com/image/photos/17800000/Cute-Panda-Cubs-Together-pandas-17838800-450-324.jpg"
+    src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/04/Imagine_Dragons%2C_Roundhouse%2C_London_%2835390234536%29.jpg/500px-Imagine_Dragons%2C_Roundhouse%2C_London_%2835390234536%29.jpg"
     alt="Imagine Dragon Band"
     />
 
