--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
   <body>
     <h1>Imagine Dragons Tribute Page!</h1>
 
-    <img
-    src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/04/Imagine_Dragons%2C_Roundhouse%2C_London_%2835390234536%29.jpg/500px-Imagine_Dragons%2C_Roundhouse%2C_London_%2835390234536%29.jpg"
-    alt="Imagine Dragon Band"
+    <img src="file:///Users/aazeez1/Desktop/img1.jpg" alt="Imagine Dragon Band"
     />
-
+<!-- src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/04/Imagine_Dragons%2C_Roundhouse%2C_London_%2835390234536%29.jpg/500px-Imagine_Dragons%2C_Roundhouse%2C_London_%2835390234536%29.jpg" -->
   <h2>Bio</h2>
 
     <p>
